[gd_scene load_steps=18 format=2]

[ext_resource path="res://script/Lives_count.gd" type="Script" id=1]
[ext_resource path="res://Assets/coin.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/BeanBoy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Death.tscn" type="PackedScene" id=4]
[ext_resource path="res://script/Mods/Survive.gd" type="Script" id=5]
[ext_resource path="res://Assets/Enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://script/EnemySpawn.gd" type="Script" id=7]
[ext_resource path="res://script/Enemys_Waves.gd" type="Script" id=8]
[ext_resource path="res://script/score.gd" type="Script" id=9]
[ext_resource path="res://script/Death.gd" type="Script" id=13]
[ext_resource path="res://fonts/Roboto-BoldItalic.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://fonts/Roboto-Black.ttf" type="DynamicFontData" id=21]

[sub_resource type="BoxShape" id=1]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 32
use_filter = true
font_data = ExtResource( 21 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 20 )

[node name="Survive" type="Spatial"]
script = ExtResource( 5 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 20, 0, 0, 0, 1, 0, 0, 0, 20, 0, -1.04318, 0 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/CollisionShape"]
mesh = SubResource( 3 )
skeleton = NodePath("../..")

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.765537, 0 )

[node name="CameraPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15.4158, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 13.3046, 0 )
fov = 73.0

[node name="Coins" type="Spatial" parent="."]

[node name="coin" parent="Coins" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -12.3823, 0.758913, 0 )

[node name="PowerUps" type="Spatial" parent="."]

[node name="Control" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="Coins_label" type="Label" parent="Control"]
margin_right = 421.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 4 )
text = "you have:        coins"

[node name="Lives_label" type="Label" parent="Control"]
margin_top = 28.0
margin_right = 421.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 4 )
text = "you have:        lives"

[node name="Coins_count" type="Label" parent="Control"]
margin_left = 96.0
margin_right = 247.0
margin_bottom = 71.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
align = 1
script = ExtResource( 9 )

[node name="Lives_count" type="Label" parent="Control"]
margin_left = 95.0
margin_top = 30.0
margin_right = 246.0
margin_bottom = 152.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
align = 1
script = ExtResource( 1 )

[node name="Area" parent="." instance=ExtResource( 4 )]
transform = Transform( 50, 0, 0, 0, 1, 0, 0, 0, 50, 0, -16.3151, 0 )
script = ExtResource( 13 )

[node name="Enemys" type="Spatial" parent="."]

[node name="Enemy" parent="Enemys" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.47755, 0, 0 )

[node name="EnemySpawn" type="Spatial" parent="."]
script = ExtResource( 7 )
Enemy = ExtResource( 6 )

[node name="Timer" type="Timer" parent="EnemySpawn"]

[node name="Waves" type="Node" parent="EnemySpawn"]

[node name="Wave1" type="Node" parent="EnemySpawn/Waves"]
script = ExtResource( 8 )

[node name="Wave2" type="Node" parent="EnemySpawn/Waves"]
script = ExtResource( 8 )
num_of_enemys = 10

[node name="Wave3" type="Node" parent="EnemySpawn/Waves"]
script = ExtResource( 8 )
num_of_enemys = 50
sec_between_spawns = 1

[connection signal="body_entered" from="Coins/coin" to="Coins/coin" method="_on_coin_body_entered"]
[connection signal="body_entered" from="Area" to="Area" method="_on_Area_body_entered"]
[connection signal="youDead" from="Enemys/Enemy" to="Control/Lives_count" method="_on_Enemy_youDead"]
[connection signal="timeout" from="EnemySpawn/Timer" to="EnemySpawn" method="_on_Timer_timeout"]
